<resources>
    <string name="app_name">Tamboon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="charity_banner_image">Charity banner image</string>
    <string name="card_number">Card number</string>
    <string name="amount">Amount (THB)</string>
    <string name="donate">Donate</string>
    <string name="name_on_card">Name on card</string>
    <string name="month">Month</string>
    <string name="cvv">CVV</string>
    <string name="year">Year</string>
    <string name="donate_completed">Donate completed.</string>
    <string name="back_to_charities_list">Back to charities page</string>
    <string name="donating">Donating...</string>
    <string name="thank_you">Thank you</string>
    <string name="success">Success</string>
    <string name="back_to_charities_page">Back to charities page</string>
    <string name="thank_you_for_donate">Thank you for donate</string>
    <string name="donate_success">Donate Success</string>
    <string name="required_input">Required this input</string>
    <string name="dismiss">Dismiss</string>
    <string name="retry">Retry</string>
</resources>
