<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.natthawut.tamboon.ui.donation.DonationFragment">

    <data>

        <variable
            name="charityName"
            type="String" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/charity_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{charityName}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Name" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/card_number_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/charity_name_text">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/card_number_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_number"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_on_card_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/card_number_input_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name_on_card_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_on_card"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/expire_date_input_layout"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/name_on_card_input_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/expire_date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/month"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/security_code_input_layout"
            android:layout_width="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/name_on_card_input_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/security_code_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cvv"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/amount_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/expire_date_input_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/amount_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/donate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/donate"
            app:layout_constraintTop_toBottomOf="@id/amount_input_layout" />

    </android.support.constraint.ConstraintLayout>

</layout>
